# liqueur

./: .gitignore  CMakeLists.txt  README.md  install.sh  note  uninstall.sh
src/: bmp.h  main.cpp  sl3.h  slib.cpp  slib.h
